# Copyright 2018-2023 the Deno authors. All rights reserved. MIT license.

[workspace]
resolver = "2"
members = [
  "core",
  "ops",
  "ops/compile_test_runner",
  "serde_v8",
]

[workspace.package]
authors = ["the Deno authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/denoland/deno_core"

[workspace.dependencies]
# Local dependencies
deno_core = { version = "0.221.0", path = "./core" }
deno_ops = { version = "0.97.0", path = "./ops" }
serde_v8 = { version = "0.130.0", path = "./serde_v8" }

v8 = { version = "0.79.2", default-features = false }
deno_ast = { version = "0.29.1", features = ["transpiling"] }
deno_unsync = "0.3.0"

anyhow = "1"
bencher = "0.1"
bytes = "1.4.0"
cooked-waker = "5"
derive_more = "0.99.17"
futures = "0.3.21"
hex = "0.4"
indexmap = "2"
libc = "0.2.126"
log = "0.4.17"
num-bigint = { version = "0.4", features = ["rand"] }
once_cell = "1.17.1"
parking_lot = "0.12.0"
pin-project = "1"
pretty_assertions = "1.3.0"
rand = "0.8.5"
regex = "1"
lazy-regex = "3"
prettyplease = "0.2.15"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sha2 = { version = "0.10.6", features = ["oid"] }
smallvec = "1.8"
sourcemap = "7"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.0"
tempfile = "3"
testing_macros = "0.2.11"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-metrics = { version = "0.3.0", features = ["rt"] }
tokio-rustls = "0.24.0"
tokio-util = "0.7.4"
url = { version = "2", features = ["serde", "expose_internals"] }

# macros
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
# Temporary fork while we wait for a more modern version to be published
deno-proc-macro-rules = "0.3.2"
pmutil = "0.6.1"
proc-macro-crate = "1.1.3"

# NB: the `bench` and `release` profiles must remain EXACTLY the same.
[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size

# Build release with debug symbols: cargo build --profile=release-with-debug
[profile.release-with-debug]
inherits = "release"
debug = true

# NB: the `bench` and `release` profiles must remain EXACTLY the same.
[profile.bench]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size
