# Copyright 2018-2024 the Deno authors. All rights reserved. MIT license.

[workspace]
resolver = "2"
members = [
  "core",
  "core/examples/snapshot",
  "dcore",
  "ops",
  "ops/compile_test_runner",
  "serde_v8",
  "testing",
]

[workspace.package]
authors = ["the Deno authors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/denoland/deno_core"

[workspace.dependencies]
# Local dependencies
deno_core = { version = "0.307.0", path = "./core" }
deno_ops = { version = "0.183.0", path = "./ops" }
serde_v8 = { version = "0.216.0", path = "./serde_v8" }
deno_core_testing = { path = "./testing" }

v8 = { version = "0.105.0", default-features = false }
deno_ast = { version = "=0.40.0", features = ["transpiling"] }
deno_unsync = "0.4.0"
deno_core_icudata = "0.0.73"

anyhow = "1"
bencher = "0.1"
bincode = "1"
criterion = "0.5"
bit-set = "0.5.3"
bit-vec = "0.6.3"
bytes = ">=1.6.0"
cooked-waker = "5"
fastrand = "2"
futures = "0.3.21"
libc = "0.2.126"
memoffset = ">=0.9"
num-bigint = { version = "0.4", features = ["rand"] }
parking_lot = "0.12.0"
percent-encoding = "2.3.0"
pin-project = "1"
pretty_assertions = "1.3.0"
rand = "0.8.5"
prettyplease = "0.2.15"
rstest = "0"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
smallvec = "1.8"
sourcemap = "8"
static_assertions = "1"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.0"
testing_macros = "0.2.11"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
twox-hash = "1.6.3"
url = { version = "2", features = ["serde", "expose_internals"] }

# macros
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro-rules = "0.4.0"

[profile.dev.package.v8]
# v8 miscompiles at opt-level=0
opt-level = 1

# NB: the `bench` and `release` profiles must remain EXACTLY the same.
[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size

# Build release with debug symbols: cargo build --profile=release-with-debug
[profile.release-with-debug]
inherits = "release"
debug = true

# NB: the `bench` and `release` profiles must remain EXACTLY the same.
[profile.bench]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size
