# Copyright 2018-2023 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_core"
version = "0.218.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "A modern JavaScript/TypeScript runtime built with V8, Rust, and Tokio"

[lib]
path = "lib.rs"

[features]
default = ["v8_use_custom_libcxx"]
v8_use_custom_libcxx = ["v8/use_custom_libcxx"]
include_js_files_for_snapshotting = []
unsafe_runtime_options = []

[dependencies]
anyhow.workspace = true
bytes.workspace = true
deno_ops.workspace = true
deno_unsync.workspace = true
futures.workspace = true
indexmap.workspace = true
libc.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
pin-project.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
serde_v8.workspace = true
smallvec.workspace = true
sourcemap.workspace = true
tokio.workspace = true
url.workspace = true
v8.workspace = true

[[example]]
name = "http_bench_json_ops"
path = "examples/http_bench_json_ops/main.rs"

# These dependencies are only used for the 'http_bench_*_ops' examples.
[dev-dependencies]
cooked-waker.workspace = true
deno_ast.workspace = true
bencher.workspace = true
pretty_assertions.workspace = true

[[bench]]
name = "ops_sync"
path = "benches/ops/sync.rs"
harness = false
required-features = ["unsafe_runtime_options"]
