# Copyright 2018-2023 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_ops"
version = "0.102.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "Proc macro for writing Deno Ops"

[lib]
path = "./lib.rs"
proc-macro = true

[dependencies]
deno-proc-macro-rules.workspace = true
lazy-regex.workspace = true
once_cell.workspace = true
pmutil.workspace = true
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
strum.workspace = true
strum_macros.workspace = true
syn.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
prettyplease.workspace = true
testing_macros.workspace = true
