# Copyright 2018-2025 the Deno authors. MIT license.

[package]
name = "deno_ops"
version = "0.223.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "Proc macro for writing Deno Ops"

[lib]
path = "./lib.rs"
proc-macro = true

[dependencies]
indexmap.workspace = true
proc-macro-rules.workspace = true
proc-macro2.workspace = true
quote.workspace = true
stringcase = "0.4.0"
strum.workspace = true
strum_macros.workspace = true
syn.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
prettyplease.workspace = true
testing_macros.workspace = true
