# Copyright 2018-2024 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno_core_testing"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
readme = "README.md"
repository.workspace = true

[lib]
path = "./lib.rs"

[dependencies]
anyhow.workspace = true
deno_ast.workspace = true
deno_core.workspace = true
deno_core.features = ["unsafe_use_unprotected_platform", "snapshot_flags_eager_parse"]
futures.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
prettyplease.workspace = true
testing_macros.workspace = true
