
[package]
name = "deno_ops_compile_test_runner"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
description = "Proc macro for writing Deno Ops"

[lib]

[dev-dependencies]
trybuild = "1.0"
pretty_assertions.workspace = true
prettyplease = "0.2.9"
testing_macros = "0.2.11"
deno_ops.workspace = true
deno_core.workspace = true
syn2.workspace = true
bytes.workspace = true
serde.workspace = true
