# Copyright 2018-2025 the Deno authors. MIT license.
[package]
name = "deno_ops_compile_test_runner"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
readme = "README.md"
repository.workspace = true
description = "Compile-test runner for deno_ops"

[lib]

[dev-dependencies]
bytes.workspace = true
deno_core.workspace = true
deno_error.workspace = true
deno_ops.workspace = true
pretty_assertions.workspace = true
prettyplease = "0.2.9"
rustversion = "1.0"
serde.workspace = true
syn.workspace = true
testing_macros = "0.2.11"
trybuild = "1.0"
