# Copyright 2018-2024 the Deno authors. All rights reserved. MIT license.
# Note: Since Cargo "example" targets don't discover/use `build.rs` files, this
# example is a member of the root `deno_core` workspace. That means it will
# compile with `cargo build` in the root, so that this example/documentation
# stays in-sync with development.

[package]
name = "build-your-own-js-snapshot"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[dependencies]
deno_core.workspace = true
tokio.workspace = true

[build-dependencies]
deno_core.workspace = true
